--- a/indexstyle.css
+++ b/indexstyle.css
@@ -9,163 +9,245 @@
 
 /* <!--
 This is the Welcome page CSS--> */
+#bodywelcomepage{
+    overflow:hidden;
+} 
 root {
     display: block;
 }
-#hello {
-    font-family: candara; 
-    text-align: center; 
-    font-size:5em; 
-    background-color:white 
+.moveit {
+    bottom:580px;
+    position:relative;
 }
-
+.blueish {
+    width:800px;
+    position:relative;
+    left:200px;
+}
+#hello {
+    font-family: candara;
+    text-align: center;
+    font-size:5em;
+    background-color:white
+}
 body {
     background-color:pink;
-    background:url("http://static.tumblr.com/oct6d4x/wG5m4ialf/back4__2_.png");
+    /*     background:url("http://static.tumblr.com/oct6d4x/wG5m4ialf/back4__2_.png"); */
+    background: url("http://hd4wallpapers.net/wp-content/uploads/2014/12/Ocean-Background-Tumblr.jpg");
 }
-
-
 body {
     font-family: candara;
 }
-
-#text{
+#text {
     text-align:left;
 }
-#pic{
+#pic {
     text-align:center;
 }
-
-#pic2{
+#pic2 {
     width:400px;
     height:400px;
-    
 }
-#pic3{
+#pic3 {
     text-align:center;
 }
-
-#nav-bar a{
+#nav-bar a {
     text-decoration: none;
 }
-
-#nav-bar li{
-
-     display: inline-block;
-     margin-right: 20px;
-/*         border: 2px solid black; */
+#nav-bar li {
+    display: inline-block;
+    margin-right: 20px;
+    /*         border: 2px solid black; */
 }
-
-#nav-bar ul{
-/*     border: 2px solid black; */
-/*     transform:rotate(20deg); */
+#nav-bar ul {
+    /*     border: 2px solid black; */
+    /*     transform:rotate(20deg); */
 }
-
-
 #nav-bar span {
-  font: 16px Monaco, MonoSpace;
-  height: 200px;
-  position: absolute;
-  width: 20px;
-  left: 605px;
-  top: 190px;
-  transform-origin: bottom center;
-  
-/*   transform:rotate(20deg);   */
+    font: 16px Monaco, MonoSpace;
+    height: 200px;
+    position: absolute;
+    width: 20px;
+    left: 605px;
+    top: 190px;
+    transform-origin: bottom center;
+    /*   transform:rotate(20deg);   */
 }
-
-#nav-bar .aboutme:hover{
+#nav-bar .aboutme:hover {
     color: white;
 }
-
-
-#nav-bar .class:hover{
+#nav-bar .class:hover {
     color: white;
 }
-
-
-#nav-bar .html:hover{
+#nav-bar .html:hover {
     color: white;
 }
-
-#nav-bar .hardware:hover{
+#nav-bar .hardware:hover {
     color: white;
 }
-
-.char1 { transform: rotate(265deg); }
-.char2 { transform: rotate(269deg); }
-.char3 { transform: rotate(273deg); }
-.char4 { transform: rotate(277deg); }
-.char5 { transform: rotate(281deg); }
-.char6 { transform: rotate(288deg); }
-.char7 { transform: rotate(292deg); }
-
+.char1 {
+    transform: rotate(265deg);
+}
+.char2 {
+    transform: rotate(269deg);
+}
+.char3 {
+    transform: rotate(273deg);
+}
+.char4 {
+    transform: rotate(277deg);
+}
+.char5 {
+    transform: rotate(281deg);
+}
+.char6 {
+    transform: rotate(288deg);
+}
+.char7 {
+    transform: rotate(292deg);
+}
 /* .char8 { transform: rotate(297deg); } */
+
 /* .char9 { transform: rotate(52deg); } */
+
 /* .char9 { transform: rotate(deg); } */
+
 /* .char10 { transform: rotate(64deg); }
 .char11 { transform: rotate(70deg); }
 .char12 { transform: rotate(76deg); }
 .char13 { transform: rotate(82deg); } */
-
-.char14 { transform: rotate(306deg); }
-.char15 { transform: rotate(310deg); }
-.char16 { transform: rotate(314deg); }
-.char17 { transform: rotate(318deg); }
-.char18 { transform: rotate(325deg); }
-.char19 { transform: rotate(329deg); }
-.char20 { transform: rotate(333deg); }
-.char21 { transform: rotate(337deg); }
-.char22 { transform: rotate(341deg); }
-
+ .char14 {
+    transform: rotate(306deg);
+}
+.char15 {
+    transform: rotate(310deg);
+}
+.char16 {
+    transform: rotate(314deg);
+}
+.char17 {
+    transform: rotate(318deg);
+}
+.char18 {
+    transform: rotate(325deg);
+}
+.char19 {
+    transform: rotate(329deg);
+}
+.char20 {
+    transform: rotate(333deg);
+}
+.char21 {
+    transform: rotate(337deg);
+}
+.char22 {
+    transform: rotate(341deg);
+}
 /* .char23 { transform: rotate(142deg); } */
-
-.char41 { transform: rotate(355deg); }
-.char42 { transform: rotate(358deg); }
-.char43 { transform: rotate(361deg); }
-.char44 { transform: rotate(364deg); }
-.char45 { transform: rotate(367deg); }
-.char46 { transform: rotate(370deg); }
-.char47 { transform: rotate(373deg); }
-.char48 { transform: rotate(376deg); }
-
-
-
-
-.char24 { transform: rotate(394deg); }
-.char25 { transform: rotate(398deg); }
-.char26 { transform: rotate(402deg); }
-.char27 { transform: rotate(406deg); }
-.char28 { transform: rotate(410deg); }
-.char29 { transform: rotate(414deg); }
-.char30 { transform: rotate(418deg); }
-.char31 { transform: rotate(422deg); }
-
-.char32 { transform: rotate(429deg); }
-.char33 { transform: rotate(433deg); }
-.char34 { transform: rotate(437deg); }
-.char35 { transform: rotate(441deg); }
-.char36 { transform: rotate(445deg); }
-.char37 { transform: rotate(449deg); }
-.char38 { transform: rotate(454deg); }
-.char39 { transform: rotate(457deg); }
-
-.char40 { transform: rotate(243deg); }
-
+ .char41 {
+    transform: rotate(355deg);
+}
+.char42 {
+    transform: rotate(358deg);
+}
+.char43 {
+    transform: rotate(361deg);
+}
+.char44 {
+    transform: rotate(364deg);
+}
+.char45 {
+    transform: rotate(367deg);
+}
+.char46 {
+    transform: rotate(370deg);
+}
+.char47 {
+    transform: rotate(373deg);
+}
+.char48 {
+    transform: rotate(376deg);
+}
+.char24 {
+    transform: rotate(394deg);
+}
+.char25 {
+    transform: rotate(398deg);
+}
+.char26 {
+    transform: rotate(402deg);
+}
+.char27 {
+    transform: rotate(406deg);
+}
+.char28 {
+    transform: rotate(410deg);
+}
+.char29 {
+    transform: rotate(414deg);
+}
+.char30 {
+    transform: rotate(418deg);
+}
+.char31 {
+    transform: rotate(422deg);
+}
+.char32 {
+    transform: rotate(429deg);
+}
+.char33 {
+    transform: rotate(433deg);
+}
+.char34 {
+    transform: rotate(437deg);
+}
+.char35 {
+    transform: rotate(441deg);
+}
+.char36 {
+    transform: rotate(445deg);
+}
+.char37 {
+    transform: rotate(449deg);
+}
+.char38 {
+    transform: rotate(454deg);
+}
+.char39 {
+    transform: rotate(457deg);
+}
+.char40 {
+    transform: rotate(243deg);
+}
 /* .char49 { transform: rotate(deg); } */
+
 /* .char50 { transform: rotate(940deg); } */
-.char51 { transform: rotate(1deg); }
-.char52 { transform: rotate(106deg); }
-.char53 { transform: rotate(66deg); }
-.char54 { transform: rotate(118deg); }
-.char55 { transform: rotate(124deg); }
-.char56 { transform: rotate(130deg); }
-.char57 { transform: rotate(136deg); }
-
-
+ .char51 {
+    transform: rotate(1deg);
+}
+.char52 {
+    transform: rotate(106deg);
+}
+.char53 {
+    transform: rotate(66deg);
+}
+.char54 {
+    transform: rotate(118deg);
+}
+.char55 {
+    transform: rotate(124deg);
+}
+.char56 {
+    transform: rotate(130deg);
+}
+.char57 {
+    transform: rotate(136deg);
+}
 /* <!--
 This is the About Me page CSS--> */
-
+ #body2 {
+    background: url("http://hd4wallpapers.net/wp-content/uploads/2014/12/Ocean-Background-Tumblr.jpg");
+}
 h1 {
     color:black;
     font-family: Delicious, serif;
@@ -176,101 +258,403 @@ h1 {
     left:-200px;
     bottom:330px;
 }
-
-
-
-#gif{
+#gif {
     width: 360px;
     position: relative;
     top: 80px;
     left: -20px;
-    
 }
-
-.pp{
-    position: relative;
-    bottom:330px;
-    right: -335px;
-    color:black;
-}
-
-#welcome-page{
-    display:inline;
-    position:relative;
-    
-}
-
-#this-class{
+#welcome-page {
     display:inline;
     position:relative;
 }
-
-#html-css{
+#this-class {
     display:inline;
     position:relative;
 }
-
-#this-class{
+#html-css {
     display:inline;
     position:relative;
 }
-
-#c-hardware{
+#this-class {
     display:inline;
     position:relative;
 }
-
-.hrefs{
+#c-hardware {
+    display:inline;
+    position:relative;
+}
+.hrefs {
     text-decoration:none;
     padding-right: 5px;
-    border: 2px solid grey
+    border: 2px solid rgb(118, 104, 198);
+    z-index:8;
+    background-color:rgb(165, 150, 245);
 }
-
-
-.hrefs:hover{
+.hrefs:hover {
     color: white;
     text-decoration:underline;
 }
-
-a:active{
-    color: blue;   
+a:active {
+    color: blue;
+}
+.bout {
+    width:800px;
+    max-height: 700px;
+    position:relative;
+    z-index:-100;
+    left:330px;
+    top:190px;
+}
+#pp {
+    width:700px;
+    position: relative;
+    bottom:200px;
+    right: -380px;
+    color:black;
+    z-index: 8;
+    height:300px;
+    clear:right;
+    margin:10px;
+}
+.box {
+    position:relative;
+    top:-50px;
+    z-index:-100;
 }
 
+#boutaboutme{
+    position:absolute;
+    bottom:35px;
+    height:650px;
+}
+.suitcase{
+    width:150px;
+    left:380px;
+    top:200px;
+    position:absolute;
+    height:150px;
+}
+.vb{
+    left:560px;
+    top:200px;
+}
+.horse{
+    top:200px;
+    left:930px;
+}
+.friends{
+    top:200px;
+    left:745px;
+}
 
 /* <!--
 This is the This Class page CSS--> */
-
-#flower-pic{
+ #flower-pic {
     position:absolute;
     top:50px;
     left: 50px;
 }
-
-
-.this{
-   font-size:4em; 
-   position:relative;
-   bottom:-80px;
-   left:330px;
-   font-weight:bold;
-   
+.this {
+    font-size:4em;
+    position:relative;
+    bottom:-80px;
+    left:330px;
+    font-weight:bold;
+}
+.text-box {
+    left: 400px;
+    position:relative;
+    bottom:-70px;
 }
 
-.hrefs{
-/*     position:relative; */
+#boutut{
+    width:800px;
+    max-height: 280px;
+    position:relative;
+    z-index:-100;
+    left:-50px;
+    bottom:350px; 
+}
+.tim{
+    width:200px;
+}
+.pp2{
+    width:700px;
+/*     position: relative; */
+/*     bottom:400px; */
+/*     right: -380px; */
+    color:black;
+    z-index: 8;
+    overflow:auto;
+/*     border: 2px solid black; */
+    height:300px;
 }
 
-#city{
+#bodythisclass{
+    overflow:hidden;
+}
+/* <!--
+This is the HTML&CSS CSS--> */
+.table1{
+    text-align:center;
+    width:80%;
+    margin-left: auto;
+    margin-right: auto;
+    position:relative;
+    bottom:950px;
+}
+.table2{
+    text-align:center;
+    width:80%;
+    margin-left: auto;
+    margin-right: auto;
+    position:relative;
+    bottom:900px;
+}
+.woahthere{
+    width:600px;
+    vertical-align:top;
+}
+#city {
     position:relative;
     left:410px;
     width:400px;
 }
-
-#headinghtml{
+#headinghtml {
     font-weight:bold;
     text-align:center;
     font-size:3em;
     position:relative;
     bottom:295px;
 }
+.blue {
+    width:400px;
+    position:relative;
+    left:250px;
+    bottom:590px;
+    transform:rotateX (190deg);
+}
+.pic-and-header {
+    position: relative;
+    right: 10px;
+    bottom: 50px;
+    z-index:-90;
+}
+.hrefs {
+    z-index:10;
+}
 
+#bouthtml{
+    position:absolute;
+    bottom:130px;
+    height:1950px;
+    width:1100px;
+    left:65px;
+    top:360px;
+}
+
+#bouthtml2{
+    bottom:0px;
+    width:1100px;
+    position:relative;
+    height:900px;
+    left:57px;
+    top:360px;
+}
+
+.pp5{
+    z-index:70;
+}
+
+
+/* .htmlsuperior{
+    z-index:100;
+    position:absolute;
+    top:200px;
+    left:450px;
+    width:300px;
+    overflow:auto;
+} */
+
+#h20{
+    z-index:100;
+    position:absolute;
+    top:200px;
+    left:450px;
+    width:300px;
+    overflow:auto;
+}
+
+/* #html1{
+     z-index:100;
+    position:absolute;
+    top:200px;
+    left:450px;
+    width:300px;
+    overflow:auto;
+} */
+
+/* <!--
+This is the Computer Hardware CSS--> */
+ .palmtree {
+    width:250px;
+    height:250px;
+    position:relative;
+    bottom:65px;
+    left:800px;
+}
+.h1n1 {
+    font-weight:bold;
+    text-align:center;
+    position:relative;
+    left:-15px;
+    bottom:230px;
+}
+.textnbox {
+    position:relative;
+    top:120px;
+    left:-100px;
+}
+
+#boutch{
+    position:absolute;
+}
+
+/* .motherboard{
+    width:380px;
+}
+
+.motherboard:hover{
+        -moz-transform: scaleX(-1);
+        -o-transform: scaleX(-1);
+        -webkit-transform: scaleY(-1);
+        transform: scaleX(-1);
+        filter: FlipH;
+        -ms-filter: "FlipH";
+} */
+
+.flip-container
+{
+    position:relative;
+    -webkit-perspective:1000;
+    perspective:1000;
+}
+
+.front-card{
+     width:400px;
+}
+
+
+.flip-cards
+{
+    width:200px;
+    height:291px;
+    position:relative;
+    float:left;    
+    margin-left:5px;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+}
+
+
+.flip-cards:hover
+{
+    transform: rotateY( 180deg );
+    -webkit-transform: rotateY(180deg);
+}
+
+
+.flip-cards div
+{
+    width:390px;
+    height:300px;
+    position:absolute;
+    border-radius:15px;    
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+}
+
+.front-card
+{
+    z-index: 2;
+    background-image: url('/images/blog/cover.png');
+}
+
+.reverse-card
+{
+    -webkit-transform: rotateY(180deg);
+    transform: rotateY( 180deg );
+    background-color:rgb(205, 136, 175);
+/*     overflow:auto; */
+    width:400px;
+    padding:10px;
+    padding-top:50px;
+    padding-left:50px;
+}
+
+#card1
+{
+    background-image: url('/images/blog/ace_of_spades.png');
+}
+
+#card2
+{
+    background-image: url('/images/blog/8_of_hearts.png');
+}
+
+#card3
+{
+    background-image: url('/images/blog/black_joker.png');
+}
+
+#hover{
+    text-align:center;
+    position:relative;
+    left:-15px;
+    bottom:245px;
+}
+
+#motherboardflip{
+    bottom:190px;
+/*     border:2px solid black; */
+    width: 400px;
+    right:-150px;
+}
+#cpuflip{
+    bottom:190px;
+/*     border:2px solid black; */
+    width:400px;
+    left:250px;
+}
+#ramflip{
+    bottom:90px;
+/*     border:2px solid black; */
+    width:400px;
+    right:-150px;
+}
+#harddriveflip{
+    bottom:90px;
+/*     border:2px solid black; */
+    width:400px;
+    left:250px;
+    height:291px;
+}
+#communicateflip{
+    bottom:0px;
+/*     border:2px solid black; */
+    width:400px;
+    right:-150px;   
+}
+#keyflip{
+    bottom:0px;
+/*     border:2px solid black; */
+    width:400px;
+    left:250px; 
+    height:281px;
+}
+.ppp{
+    width:350px;
+}
