--- a/indexstyle.css
+++ b/indexstyle.css
@@ -528,7 +528,7 @@ This is the HTML&CSS CSS--> */
 
 #city {
     position: relative;
-    left: 410px;
+    right: -470px;
     width: 400px;
 }
 
@@ -560,7 +560,7 @@ This is the HTML&CSS CSS--> */
     bottom: 130px;
     height: 1950px;
     width: 1100px;
-    left: 65px;
+    left: 127px;
     top: 360px;
 }
 
@@ -569,7 +569,7 @@ This is the HTML&CSS CSS--> */
     width: 1100px;
     position: relative;
     height: 900px;
-    left: 57px;
+    left: 119px;
     top: 360px;
 }
 
@@ -828,7 +828,7 @@ This is the Computer Hardware CSS--> */
     background-color: rgb(165, 150, 245);
     display: inline-block;
     position: absolute;
-    left: 46.2%;
+    left: 540px;
     top: 6%;
 }
 
@@ -836,3 +836,4 @@ This is the Computer Hardware CSS--> */
     color: white;
     text-decoration: underline;
 }
+
